tests/snapshots/integration__spec_test__spec_combine_shorts.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_combine_shorts -ac yes

OUTPUT
argc_a=1
argc_c=yes
cmd_combine_shorts

