tests/snapshots/integration__spec_test__spec_fn_args.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec _fn_args -z 5 -y=6 -y8 --msg cool -7 --here=there -xvf file.tgz -qrs=1234 -n -555 one two three -abc+5 -c-6 -- four -z 0

STDOUT
argc_z=5
argc_y=( 6 8 )
argc_msg=cool
argc_7=1
argc_here=there
argc_x=1
argc_v=1
argc_f=file.tgz
argc_qrs=1234
argc_n=-555
argc_a=1
argc_b=1
argc_c=( \+5 -6 )
_fn_args one two three four -z 0;exit;

STDERR


