tests/snapshots/integration__spec_test__spec_fn_args2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec _fn_args  

STDOUT
argc__line=\ 
argc__words=( \  )
_fn_args;exit;

STDERR


