tests/snapshots/integration__spec_test__spec_fn_bars.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec _fn_bars

STDOUT
_fn_bars;exit;

STDERR


