tests/snapshots/integration__spec_test__spec_help_command3.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec help cmd_prefered

OUTPUT
cat >&2 <<-'EOF' 
error: invalid value 'cmd_prefered' for '<command>'
  [possible values: cmd_preferred, cmd_omitted, cmd_flag_names, cmd_no_long_flags, cmd_option_names, cmd_no_long_options, cmd_option_formats, cmd_option_quotes, cmd_option_notations, cmd_flag_formats, cmd_positional, cmd_positional_only, cmd_positional_many, cmd_positional_requires, cmd_positional_with_choices, cmd_positional_with_default, cmd_positional_with_default_fn, cmd_positional_with_choices_and_default, cmd_positional_with_choices_fn, cmd_positional_with_choices_fn2, cmd_positional_with_choices_and_required, cmd_positional_with_choices_fn_and_required, cmd_without_any_arg, cmd_alias, a, alias, cmd_with_hyphens, cmd_nested_command, cmd_nested_command2, cmd_notation_values, cmd_dynamic_compgen, cmd_combine_shorts, cmd_single_dash, cmd_two_multiple_positionals]

For more information, try '--help'.

EOF
exit 1

