tests/snapshots/integration__spec_test__spec_nested_command.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_nested_command

OUTPUT
cat >&2 <<-'EOF' 
spec-cmd_nested_command 0.1.0
Nested command

USAGE: spec cmd_nested_command [OPTIONS] <COMMAND>

OPTIONS:
      --opt1 <OPT1>
  -h, --help
      --version

COMMANDS:
  foo  Subcommand of nested command [aliases: a]

EOF
exit 0

