tests/snapshots/integration__spec_test__spec_nested_command2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_nested_command2

OUTPUT
cmd_nested_command2::main

