tests/snapshots/integration__spec_test__spec_nested_command_exec.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_nested_command foo --opt1 abc

OUTPUT
argc_opt1=abc
cmd_nested_command::foo

